# microblog.pub

./: .build.yml  .dockerignore  .drone.yml  .env  .flake8  .gitignore  .isort.cfg  .travis.yml  AUTHORS  Dockerfile  ENVVARS.md  LICENSE  Makefile  README.md  activity_gc.py  activitypub.py  alembic.ini  api.py  app.py  app_utils.py  boussole.json  config.py  dev-requirements.txt  docker-compose-dev.yml  docker-compose-tests.yml  docker-compose.yml  gc.py  migrations.py  poussetaches.py  pyproject.toml  requirements.txt  run.sh  run_dev.sh  startup.py  tasks.py  test_little_boxes.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1647cef23e9b_incoming_activity_model.py  192aff8bc1e2_add_indieauth_auth_request_model.py  2022_07_28_1725-f5717d82b3ff_initial_migration.py  2022_07_31_0815-50d26a370a65_add_is_blocked_attribute_on_actors.py  2022_08_02_1519-1702e88016db_tweak_notification_model.py  2022_08_14_1638-9bc69ed947e2_new_conversation_field.py  2022_08_14_2059-6286262bb466_enable_wal_mode.py  2022_08_17_1758-5d3e3f2b9b4e_add_actor_is_deleted.py  2022_08_19_1246-604d125ea2fb_add_inboxobject_has_local_mention.py  2022_10_30_1409-b28c0551c236_add_a_slug_field_for_outbox_objects.py  2022_11_16_1942-fadfd359ce78_add_webmention_webmention_type.py  69ce9fbdc483_add_webmentions_count.py  (+18 more)
app/: activitypub.py  actor.py  admin.py  ap_object.py  boxes.py  config.py  customization.py  database.py  httpsig.py  incoming_activities.py  indieauth.py  key.py  ldsig.py  lookup.py  main.py  media.py  micropub.py  models.py  opengraph.py  outgoing_activities.py  process_outgoing_activities.py  prune.py  redirect.py  source.py  templates.py  uploads.py  urlutils.py  webfinger.py  webmentions.py
blueprints/: admin.py  api.py  indieauth.py  tasks.py  well_known.py
config/: me.sample.yml
core/: activitypub.py  db.py  feed.py  gc.py  inbox.py  indexes.py  jsonld.py  meta.py  migrations.py  notifications.py  outbox.py  remote.py  shared.py  tasks.py
data/: .gitignore  _theme.scss  tests.toml
docs/: activitypub.md  api.md  developer_guide.md  head.html  install.md  user_guide.md
little_boxes/: README.md  activitypub.py  errors.py  remote_object.py  utils.py
misc/: docker-supervisord.conf  docker_start.sh  supervisord.conf  ynh-supervisord.conf
sass/: base_theme.scss  dark.scss  light.scss  theme.scss
scripts/: build_docs.py  config_wizard.py  generate_docs.py
scss/: main.scss
setup_wizard/: Dockerfile  requirements.txt  wizard.py
static/: base.css
templates/: about.html  admin.html  admin_indieauth.html  admin_tasks.html  authorize_remote_follow.html  direct_messages.html  error.html  followers.html  following.html  header.html  index.html  indieauth_flow.html  layout.html  liked.html  lists.html  login.html  lookup.html  new.html  note.html  note_debug.html  remote_follow.html  stream.html  stream_debug.html  tags.html  u2f.html  utils.html
tests/: conftest.py  factories.py  federation_test.py  integration_test.py  me.yml  test.key  test_actor.py  test_admin.py  test_emoji.py  test_httpsig.py  test_inbox.py  test_ldsig.py  test_outbox.py  test_process_outgoing_activities.py  test_public.py  test_remote_actor_deletion.py  test_tags.py  test_utils.py  utils.py
utils/: __init__.py  activitypub_utils.py  actor_service.py  blacklist.py  content_helper.py  emojis.py  errors.py  highlight.py  httpsig.py  img.py  key.py  linked_data_sig.py  local_actor_cache.py  lookup.py  media.py  meta.py  migrations.py  nodeinfo.py  notifications.py  object_service.py  opengraph.py  template_filters.py  urlutils.py  webfinger.py  webmentions.py
(+53 files in other folders)
